--- a/hover.html
+++ b/hover.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="hover.css">
-    <link rel="stylesheet" href="js/hover.js">
     <title>Buttom Hover Effect with JavasCript</title>
 </head>
 <body>
     <a href="#" class="btn"><span>Buttom</span></a>
+    <script src="/js/hover.js"></script>
 </body>
 </html>
